--- a/style.css
+++ b/style.css
@@ -1,5 +1,27 @@
+#container { margin-top:20px;
+			 margin-left: 150px;
+			 margin-right: 150px;
+			 
+			 padding: 10px 100px 10px 100px;
+			 
+			 border-radius: 10px;
+			 background-color: LightGray;
+			 
+			 text-align: left;
+}
 
 
 h1 {font-size: 64px;
 margin-bottom: -15px;
+}
+
+h2 {font-size:32px;
+margin-bottom:-10px;
+}
+
+p, li {font-size: 20px;
+}
+
+#contact{text-align: center;
+margin-bottom: -2px;
 }
